--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "serve public -p 3002",
     "serve:bg": "nohup serve public -p 3002 > server.log 2>&1 &"
   },
-  "devDependencies": {
+  "dependencies": {
     "serve": "^14.2.4"
   },
   "keywords": [
