--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "serve public -p 3002",
     "build": "echo 'Static files - no build needed'",
-    "serve": "serve public -p 3002",
-    "serve:bg": "nohup serve public -p 3002 > server.log 2>&1 &"
+    "serve": "serve public -p 3002"
   },
   "dependencies": {
     "serve": "^14.2.4"
